RESOLVED FIXED271686
Promote debug assertion to release assertion for more downcast<>() overloads on Intel
https://bugs.webkit.org/show_bug.cgi?id=271686
Summary Promote debug assertion to release assertion for more downcast<>() overloads ...
Chris Dumez
Reported 2024-03-25 19:04:53 PDT
Promote debug assertion to release assertion for more downcast<>() overloads on Intel, to match ARM. This is performance neutral on the benchmarks we track.
Attachments
Chris Dumez
Comment 1 2024-03-25 19:06:24 PDT
EWS
Comment 2 2024-03-25 23:37:43 PDT
Committed 276675@main (8dfa8c35be20): <https://commits.webkit.org/276675@main> Reviewed commits have been landed. Closing PR #26446 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-03-25 23:38:14 PDT
Note You need to log in before you can comment on or make changes to this bug.