Promote debug assertion to release assertion for more downcast<>() overloads on Intel https://bugs.webkit.org/show_bug.cgi?id=271686

Reviewed by Darin Adler and Anne van Kesteren.

Promote debug assertion to release assertion for more downcast<>() overloads on Intel,
to match ARM. This is performance neutral on the benchmarks we track.

* Source/WTF/wtf/Ref.h:
(WTF::downcast):
* Source/WTF/wtf/RefPtr.h:
(WTF::downcast):
* Source/WTF/wtf/WeakPtr.h:
(WTF::downcast):
* Source/WTF/wtf/WeakRef.h:
(WTF::downcast):

Canonical link: https://commits.webkit.org/276675@main