Source/WTF/wtf/RefPtr.h
@@ -267,13 +267,7 @@ inline RefPtr<match_constness_t<Source, Target>> downcast(RefPtr<Source, PtrTrai
 {
     static_assert(!std::is_same_v<Source, Target>, "Unnecessary cast to same type");
     static_assert(std::is_base_of_v<Source, Target>, "Should be a downcast");
-    // FIXME: This is too expensive to enable on x86 for now but we should try and
-    // enable the RELEASE_ASSERT() on all architectures.
-#if CPU(ARM64)
     RELEASE_ASSERT(!source || is<Target>(*source));
-#else
-    ASSERT_WITH_SECURITY_IMPLICATION(!source || is<Target>(*source));
-#endif
     return static_pointer_cast<match_constness_t<Source, Target>>(WTFMove(source));
 }
 
